feat: Añade soporte para FTPS y mejora la gestión de usuarios en el servidor FTP
- Implementa la opción de usar FTPS (TLS) en el cliente y servidor FTP.
- Actualiza la configuración del servidor para permitir el uso de una base de datos SQLite para la gestión de usuarios.
- Mejora la documentación en README.md para incluir instrucciones sobre el despliegue en producción y la configuración de usuarios.
- Añade un panel de administración para gestionar usuarios en la base de datos.
- Refactoriza el código para mejorar la validación de rutas y la auditoría de comandos.